[MODORDERS-1127] - Separate credits from expenditures in mod-orders