@@ -2,12 +2,12 @@ package org.folio.orders.utils.validators;
 
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
-import org.folio.rest.acq.model.finance.Encumbrance;
 import org.folio.rest.acq.model.finance.Transaction;
 import org.folio.rest.core.exceptions.HttpException;
 import org.folio.rest.jaxrs.model.Parameter;
+import org.folio.service.finance.transaction.FinanceUtils;
 
-import java.util.Collections;
+import java.util.List;
 
 import static org.folio.rest.core.exceptions.ErrorCodes.DELETE_WITH_EXPENDED_AMOUNT;
 
@@ -19,12 +19,11 @@ public class TransactionValidator {
   }
 
   public static void validateEncumbranceForDeletion(Transaction transaction) {
-    String transactionId = transaction.getId();
-    Encumbrance encumbrance = transaction.getEncumbrance();
-    if (encumbrance != null && encumbrance.getAmountExpended() > 0) {
-      logger.info("Tried to delete transaction {} but it has an expended amount.", transactionId) ;
+    if (FinanceUtils.getEncumbranceExpended(transaction) > 0) {
+      String transactionId = transaction.getId();
+      logger.info("Tried to delete transaction {} but it has an expended amount.", transactionId);
       Parameter parameter = new Parameter().withKey("id").withValue(transactionId);
-      throw new HttpException(422, DELETE_WITH_EXPENDED_AMOUNT.toError().withParameters(Collections.singletonList(parameter)));
+      throw new HttpException(422, DELETE_WITH_EXPENDED_AMOUNT.toError().withParameters(List.of(parameter)));
     }
   }
 
